# 001_Codility_

./: .gitignore  README.md
001_Codility_Test_1/: CMakeLists.txt  README.md
001_Codility_Test_1/001_Codility_Test_1/inc/: main.h
001_Codility_Test_1/001_Codility_Test_1/src/: main.cpp
001_Codility_Test_1/Codility_Test_1/cfg/: Codility_Test_1Config.h.in
001_Codility_Test_1/Codility_Test_1/inc/: Book.h  BookCard.h  CheckEntry.h  Codility_Test_1Config.h  CommandPromptArgValidator.h  FileHandler.h  FileInstance.h  FileManager.h  IFileInstance.h  IReportDao.h  Library.h  Menu.h  Reader.h  ReportDao.h  ReportDto.h  Search.h  main.h
001_Codility_Test_1/Codility_Test_1/src/: Book.cpp  BookCard.cpp  CommandPromptArgValidator.cpp  FileHandler.cpp  FileInstance.cpp  FileManager.cpp  Library.cpp  Menu.cpp  Reader.cpp  ReportDao.cpp  ReportDto.cpp  Search.cpp  main.cpp
001_Codility_Test_10/: CMakeLists.txt  README.md
001_Codility_Test_10/Codility_Test_10/cfg/: Codility_Test_10Config.h.in
001_Codility_Test_10/Codility_Test_10/inc/: CommandPromptArgValidator.h
001_Codility_Test_10/Codility_Test_10/src/: CommandPromptArgValidator.cpp
001_Codility_Test_2/: CMakeLists.txt  README.md
001_Codility_Test_2/Codility_Test_2/cfg/: Codility_Test_2Config.h.in
001_Codility_Test_2/Codility_Test_2/inc/: Codility_Test_2Config.h  CommandPromptArgValidator.h  FileSystem.h  FindMinPositiveNumber.h  HDDScanner.h  main.h
001_Codility_Test_2/Codility_Test_2/src/: CommandPromptArgValidator.cpp  FileSystem.cpp  FindMinPositiveNumber.cpp  HDDScanner.cpp  main.cpp
001_Codility_Test_3/: CMakeLists.txt  README.md
001_Codility_Test_3/Codility_Test_3/cfg/: Codility_Test_3Config.h.in
001_Codility_Test_3/Codility_Test_3/inc/: Codility_Test_3Config.h  CommandPromptArgValidator.h  ReportStructure.h  main.h
001_Codility_Test_3/Codility_Test_3/src/: CommandPromptArgValidator.cpp  ReportStructure.cpp  main.cpp
001_Codility_Test_4/: CMakeLists.txt  README.md
001_Codility_Test_4/Codility_Test_4/cfg/: Codility_Test_4Config.h.in
001_Codility_Test_4/Codility_Test_4/inc/: Codility_Test_4Config.h  CommandPromptArgValidator.h  main.h
001_Codility_Test_4/Codility_Test_4/src/: CommandPromptArgValidator.cpp  main.cpp
001_Codility_Test_5/: CMakeLists.txt  README.md
001_Codility_Test_5/Codility_Test_5/cfg/: Codility_Test_5Config.h.in
001_Codility_Test_5/Codility_Test_5/inc/: Codility_Test_5Config.h  CommandPromptArgValidator.h
001_Codility_Test_5/Codility_Test_5/src/: CommandPromptArgValidator.cpp  main.cpp
001_Codility_Test_6/: CMakeLists.txt  README.md
001_Codility_Test_6/Codility_Test_6/cfg/: Codility_Test_6Config.h.in
001_Codility_Test_6/Codility_Test_6/inc/: CommandPromptArgValidator.h
001_Codility_Test_6/Codility_Test_6/src/: CommandPromptArgValidator.cpp
001_Codility_Test_7/: CMakeLists.txt  README.md
001_Codility_Test_7/Codility_Test_7/cfg/: Codility_Test_7Config.h.in
001_Codility_Test_7/Codility_Test_7/inc/: CommandPromptArgValidator.h
001_Codility_Test_7/Codility_Test_7/src/: CommandPromptArgValidator.cpp
001_Codility_Test_8/: CMakeLists.txt  README.md
001_Codility_Test_8/Codility_Test_8/cfg/: Codility_Test_8Config.h.in
001_Codility_Test_8/Codility_Test_8/inc/: CommandPromptArgValidator.h
001_Codility_Test_8/Codility_Test_8/src/: CommandPromptArgValidator.cpp  main.cpp
001_Codility_Test_9/: CMakeLists.txt  README.md
001_Codility_Test_9/Codility_Test_9/cfg/: Codility_Test_9Config.h.in
001_Codility_Test_9/Codility_Test_9/inc/: CommandPromptArgValidator.h
001_Codility_Test_9/Codility_Test_9/src/: CommandPromptArgValidator.cpp
build-001_Codility_Test_2-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-001_Codility_Test_2-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-fb7723b6100d663c6203.json  cmakeFiles-v1-b74e31cfc348f90b6fc4.json  codemodel-v2-eb2c90ed69ef1b8ead23.json  index-2022-02-21T05-31-21-0362.json  target-Codility_Test_2-Debug-f178a4b8dfa21e6d7003.json
build-001_Codility_Test_2-Desktop_Qt_6_0_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-001_Codility_Test_2-Desktop_Qt_6_0_0_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-a109776c35eb7ddbe578.json  cmakeFiles-v1-1179e9f34e328eb18117.json  codemodel-v2-ad47e43b3657cc848c90.json  index-2022-02-21T05-32-23-0066.json  target-Codility_Test_2-Debug-11137b98b3a7960d3d92.json
